Regression: Crash in weight painting #97597

Closed
opened 2022-04-25 01:31:17 +02:00 by Germano Cavalcante · 10 comments

System Information
Operating system: macOS-12.2-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 76.3

Blender Version
Caused by {575ade22d4de472ccf9e7d2dc1ffca37416c58f6}

Short description of error
When trying to draw/paint anything in Weight Paint mode, crash

Exact steps for others to reproduce the error

  • With the default Cube, go to Weight Paint mode
  • Try to draw any weight
**System Information** Operating system: macOS-12.2-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 76.3 **Blender Version** Caused by {575ade22d4de472ccf9e7d2dc1ffca37416c58f6} **Short description of error** When trying to draw/paint anything in `Weight Paint` mode, crash **Exact steps for others to reproduce the error** - With the default Cube, go to `Weight Paint` mode - Try to draw any weight
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Author
Member

Since it was caused by 575ade22d4, @JosephEagar can you investigate?

Since it was caused by 575ade22d4, @JosephEagar can you investigate?
Philipp Oeser changed title from Crash in weight painting to Regression: Crash in weight painting 2022-04-25 08:31:43 +02:00
Philipp Oeser self-assigned this 2022-04-25 09:40:28 +02:00
Philipp Oeser removed their assignment 2022-04-25 09:51:48 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Actually, no, got enough on my plate.

Actually, no, got enough on my plate.
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member
CC @JulienKaspar

This issue was referenced by 42878ffc26

This issue was referenced by 42878ffc268657a90c3344d27487588dc64bc85f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-04-25 21:32:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97597
No description provided.