Fix T97597: vertex paint initialization was             called by weight paint mode, 	    causing a crash